# hexbot

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.dependabot/: config.yml
src/: lib.rs  main.rs  main.rs.old  request_api.rs  window.glade
src/hexbot/: coordinates.rs  coordinateslimit.rs  count.rs  dot.rs  errors.rs  hexbot.rs  mod.rs  seed.rs  widthheight.rs  withcoordinates.rs
