[package]
name = "hexbot"
version = "0.0.11"
description = "My solution for: https://noopschallenge.com/challenges/hexbot"
authors = ["rusty-snake <print_hello_world+Public@protonmail.com>"]
repository = "https://github.com/rusty-snake/hexbot"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"
keywords = ["hexbot", "noops-challenge"]

[dependencies]
tint = "1.0.1"

[dependencies.reqwest]
version = "0.9"
default_features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1.0"
default_features = false
features = ["derive"]
