[package]
name = "hexbot"
version = "0.1.0-alpha"
description = "My solution for: https://noopschallenge.com/challenges/hexbot"
authors = ["rusty-snake <print_hello_world+Public@protonmail.com>"]
repository = "https://github.com/rusty-snake/hexbot"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"
keywords = ["hexbot", "noops-challenge"]

[dependencies]
tint = "1.0.1"

[dependencies.reqwest]
version = "0.9"
default_features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1.0"
default_features = false
features = ["derive"]

[dependencies.gtk]
version = "0.8.0"
features = ["v3_24"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_60"]

[dependencies.gdk]
version = "0.12.0"
features = ["v3_24"]

[dependencies.glib]
version = "0.9.0"
features = ["v2_60"]
